--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
   pin_code_fields: ^7.3.0
   flutter_launcher_icons: ^0.13.1
   font_awesome_flutter: ^10.4.0
