--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  shared_preferences: ^2.0.0
+  provider: ^6.0.5
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   pin_code_fields: ^7.3.0
